test/typecheck/bad-compare-type-mismatch-1.txt
;;; ERROR: 1
(module
  (func
    f32.const 0
    i32.const 0
    i32.eq
    drop))
(;; STDERR ;;;
out/test/typecheck/bad-compare-type-mismatch-1.txt:6:5: error: type mismatch in i32.eq, expected [i32, i32] but got [f32, i32]
    i32.eq
    ^^^^^^
;;; STDERR ;;)
